SpeehCommand dataset, window size option for the spectrogram + plot and small improvment in preprocessing

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -68,42 +68,47 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "21945fed-8f00-4796-ab80-5f5fba7c012e",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1142ac-0008-40c0-b7a8-1118e837476a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from torchaudio.datasets import VoxCeleb1Identification, SPEECHCOMMANDS\n",
-    "from torch.utils.data import random_split, DataLoader\n",
+    "from torch.utils.data import ConcatDataset, random_split, DataLoader\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
-    "dataset = SPEECHCOMMANDS(root=\"datasets/\", download=True)\n",
+    "dataset_train = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"training\")\n",
+    "dataset_val = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"validation\")\n",
+    "dataset_test = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"testing\")\n",
     "\n",
-    "sampling_rate = dataset[0][1]\n",
-    "X = [sample[0][0] for sample in dataset]\n",
-    "Y = [sample[2] for sample in dataset]\n",
+    "sampling_rate = dataset_train[0][1]\n",
     "\n",
-    "dataset_size = len(dataset)  # Total number of samples in the dataset\n",
-    "\n",
-    "split = int(np.floor(test_split * dataset_size))\n",
-    "\n",
-    "# Use StratifiedShuffleSplit to get train/test indices\n",
-    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=SEED)\n",
-    "train_index, test_index = next(sss.split(X, Y))\n",
-    "\n",
-    "# Split data and labels using the indices\n",
-    "X_train = X[train_index]\n",
-    "Y_train = Y[train_index]\n",
-    "X_test = X[test_index]\n",
-    "Y_test = Y[test_index]\n",
+    "dataset = ConcatDataset([dataset_train, dataset_val])\n",
     "\n",
     "\n",
-    "is_multivariate = False"
+    "X_train_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset]\n",
+    "Y_train_raw = [sample[2] for sample in dataset]\n",
+    "X_test_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset_test]\n",
+    "Y_test = [sample[2] for sample in dataset_test]\n",
+    "\n",
+    "is_multivariate = False\n",
+    "\n",
+    "groups = None\n",
+    "\n",
+    "is_instances_classification = True\n",
+    "\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
+    "Y_test = le.transform(Y_test).reshape(-1, 1)\n",
+    "\n",
+    "# One-hot encode the labels\n",
+    "ohe = OneHotEncoder(sparse_output=False)\n",
+    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
+    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
    ]
   },
   {
@@ -121,8 +126,16 @@
   },
   {
    "cell_type": "raw",
-   "id": "0bc7c2cd-381f-4825-9c29-45fb42dbb1e1",
-   "metadata": {},
+   "id": "a5707b5e-116c-4bd0-9f92-136f5d6ae8cd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-24T07:35:44.122065Z",
+     "iopub.status.busy": "2024-06-24T07:35:44.121971Z",
+     "iopub.status.idle": "2024-06-24T07:35:45.328972Z",
+     "shell.execute_reply": "2024-06-24T07:35:45.328696Z",
+     "shell.execute_reply.started": "2024-06-24T07:35:44.122057Z"
+    }
+   },
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -157,17 +170,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8f1a1d7-a6b8-488e-9381-5a28e66c7fe8",
+   "cell_type": "raw",
+   "id": "a5550bc2-4e49-4ae9-bb3e-24700f3a7118",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-25T14:12:02.346595Z",
+     "iopub.status.busy": "2024-06-25T14:12:02.345871Z",
+     "iopub.status.idle": "2024-06-25T14:12:03.035951Z",
+     "shell.execute_reply": "2024-06-25T14:12:03.022165Z",
+     "shell.execute_reply.started": "2024-06-25T14:12:02.346551Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"HAART\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
    ]
@@ -175,10 +193,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698a05f7-5bbc-4262-b61d-c14549024bce",
+   "id": "dc2270ca-689b-41b4-9789-70f93865a393",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datasets.preprocessing import plot_data_distribution\n",
+    "\n",
+    "plot_data_distribution(Y_train_raw, Y_test, val = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,6 +246,18 @@
     "        del X_train, X_val\n",
     "    else:\n",
     "        X_test = X_test_raw\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945ed60a-f22d-418c-b837-db71da1f2920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets.preprocessing import plot_data_distribution\n",
+    "\n",
+    "plot_data_distribution(Y_train, Y_test, val = True)"
    ]
   },
   {
@@ -284,15 +318,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datasets.multivariate_generation\n",
+    "reload(datasets.multivariate_generation)\n",
+    "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
+    "\n",
     "if not is_multivariate:\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
+    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
     "    )\n",
     "    X_val_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
+    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
     "    )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
+    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
     "    )"
    ]
   },
@@ -328,7 +366,7 @@
     "    # Plot for a subset N features within a range arround transition from train to test\n",
     "    plt.figure(figsize=(16, 5))\n",
     "    for i in [0, 2, 10]: \n",
-    "        plt.plot(range(DIFF)[WATCH_FROM:WATCH_TO], combined_data[:, i][WATCH_FROM:WATCH_TO], label=f'Feature {i}')\n",
+    "        plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO], label=f'Feature {i}')\n",
     "    #plt.plot(steps, combined_Y[steps], label=\"Prediction\")\n",
     "    plt.title('Feature Values Around Merge Point')\n",
     "    plt.xlabel('Sample Index')\n",
@@ -403,16 +441,6 @@
    "source": [
     "from datasets.preprocessing import add_noise, duplicate_data\n",
     "\n",
-    "# PRETRAIN NOISE\n",
-    "# UNI\n",
-    "if not is_multivariate:\n",
-    "    X_pretrain_uni = X_train\n",
-    "    X_pretrain_noisy = (add_noise(X_train, noise_std))\n",
-    "\n",
-    "# MULTI\n",
-    "X_pretrain_band = X_train_band\n",
-    "X_pretrain_band_noisy = [add_noise(instance, noise_std) for instance in X_pretrain_band]\n",
-    "\n",
     "#Train/Val/Test\n",
     "if is_instances_classification:\n",
     "    # NOISE\n",
@@ -422,7 +450,7 @@
     "        X_val_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val, desc=\"VAL\")]\n",
     "        X_test_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test, desc=\"TEST\")]\n",
     "        \n",
-    "    # MULTI\n",
+    "    # MULTIX\n",
     "    X_train_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train_band, desc=\"TRAIN\")]\n",
     "    X_val_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val_band, desc=\"VAL\")]\n",
     "    X_test_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test_band, desc=\"TEST\")]\n",
@@ -439,6 +467,32 @@
     "    X_train_band_noisy = add_noise(X_train_band, noise_std)\n",
     "    X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
     "    X_test_band_noisy = add_noise(X_test_band, noise_std)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25d6f51b-0c6c-4cec-bbd5-1fff0223efed",
+   "metadata": {},
+   "source": [
+    "## Pretrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6f5fc6e-c2cf-4441-817a-6ba38f14e2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the number of instances you want to select\n",
+    "num_samples_for_pretrain = 500\n",
+    "random_indices = np.random.choice(len(X_train), num_samples_for_pretrain, replace=False)\n",
+    "\n",
+    "if not is_multivariate:\n",
+    "    X_pretrain_uni = np.array(X_train)[random_indices]\n",
+    "    X_pretrain_noisy = np.array(X_train_noisy)[random_indices]\n",
+    "X_pretrain_band = np.array(X_train_band)[random_indices]\n",
+    "X_pretrain_band_noisy = np.array(X_train_band_noisy)[random_indices]\n"
    ]
   },
   {
@@ -468,18 +522,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if is_multivariate:\n",
-    "    if is_instances_classification:\n",
-    "        common_index = 1\n",
-    "        print(\"Common index for multivariate classification should be 1\")\n",
-    "        print(\"\\nCheck it ! \\nFirst array \", X_train_raw[0].shape, \" and second array\", X_train_raw[2].shape)\n",
-    "        common_size = X_train_raw[0].shape[common_index]\n",
-    "    else:\n",
-    "        common_index = 0\n",
-    "        print(\"Common index for multivariate prediction should be 0\")\n",
-    "        common_size = X_train_raw.shape[common_index]\n",
+    "if is_instances_classification:\n",
+    "    common_index = 1\n",
+    "    print(\"Common index for multivariate classification should be 1\")\n",
+    "    print(\"\\nCheck it ! \\nFirst array \", X_train_band[0].shape, \" and second array\", X_train_band[2].shape)\n",
+    "    common_size = X_train_band[0].shape[common_index]\n",
     "else:\n",
-    "    common_size = X_train_band[1].shape[0]\n",
+    "    common_index = 1\n",
+    "    print(\"Common index for multivariate prediction should be 1\")\n",
+    "    print(\"\\nCheck it ! \\nFirst array \", X_train_band.shape, \" and second array\", X_train_band.shape)\n",
+    "    common_size = X_train_band.shape[common_index]\n",
     "\n",
     "common_size"
    ]
@@ -735,12 +787,12 @@
     "    Win *= input_scaling\n",
     "\n",
     "    if function_name == \"hadsp\":\n",
-    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, np.tanh, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "                              target_rate, RATE_SPREAD, function_name, is_instance=is_instances_classification, use_full_instance = False, max_increment=MAX_TIME_INCREMENT, \n",
     "                                                          max_partners=12, method = \"random\", n_jobs = 12, visualize=False, record_history=True)\n",
     "        variance_history=None\n",
     "    elif function_name == \"desp\":\n",
-    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, np.tanh, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "                            variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, max_increment=MAX_TIME_INCREMENT, \n",
     "                                                          max_partners=12, method = \"pearson\", n_jobs = 12, visualize=False, record_history=True)\n",
     "\n",
@@ -1031,9 +1083,7 @@
   {
    "cell_type": "markdown",
    "id": "e27380a6-3976-442d-8bb0-34bfc142985a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Classification"
    ]
@@ -1041,9 +1091,7 @@
   {
    "cell_type": "markdown",
    "id": "0f3b3a4e-b06e-450a-b7c5-68802be8013d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Classification for multivariate"
    ]
