--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -68,42 +68,62 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "bb76656a-1524-43db-b431-e80fcee53dc5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87482c3f-f0e7-4185-9ad2-c35037b131dd",
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
+   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from torchaudio.datasets import VoxCeleb1Identification, SPEECHCOMMANDS\n",
-    "from torch.utils.data import random_split, DataLoader\n",
+    "from torch.utils.data import ConcatDataset, random_split, DataLoader\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
-    "dataset = SPEECHCOMMANDS(root=\"datasets/\", download=True)\n",
+    "dataset_train = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"training\")\n",
+    "dataset_val = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"validation\")\n",
+    "dataset_test = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"testing\")\n",
     "\n",
-    "sampling_rate = dataset[0][1]\n",
-    "X = [sample[0][0] for sample in dataset]\n",
-    "Y = [sample[2] for sample in dataset]\n",
+    "sampling_rate = dataset_train[0][1]\n",
     "\n",
-    "dataset_size = len(dataset)  # Total number of samples in the dataset\n",
-    "\n",
-    "split = int(np.floor(test_split * dataset_size))\n",
-    "\n",
-    "# Use StratifiedShuffleSplit to get train/test indices\n",
-    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=SEED)\n",
-    "train_index, test_index = next(sss.split(X, Y))\n",
-    "\n",
-    "# Split data and labels using the indices\n",
-    "X_train = X[train_index]\n",
-    "Y_train = Y[train_index]\n",
-    "X_test = X[test_index]\n",
-    "Y_test = Y[test_index]\n",
+    "dataset = ConcatDataset([dataset_train, dataset_val])\n",
     "\n",
     "\n",
-    "is_multivariate = False"
+    "X_train_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset]\n",
+    "Y_train_raw = [sample[2] for sample in dataset]\n",
+    "X_test_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset_test]\n",
+    "Y_test = [sample[2] for sample in dataset_test]\n",
+    "\n",
+    "is_multivariate = False\n",
+    "\n",
+    "groups = None\n",
+    "\n",
+    "is_instances_classification = True\n",
+    "\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
+    "Y_test = le.transform(Y_test).reshape(-1, 1)\n",
+    "\n",
+    "# One-hot encode the labels\n",
+    "ohe = OneHotEncoder(sparse_output=False)\n",
+    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
+    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb784bf1-a56a-4ed7-acb1-dde1d1b96fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_name = \"SPEECHCOMMANDS\""
    ]
   },
   {
@@ -166,13 +186,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "315ee52f-c184-49d4-9fe9-79f6575e8755",
+   "cell_type": "raw",
+   "id": "00d6d077-a100-4ee9-94b7-2d5297e3f38d",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-24T14:23:42.690132Z",
+     "iopub.status.busy": "2024-06-24T14:23:42.690048Z",
+     "iopub.status.idle": "2024-06-24T14:23:44.899401Z",
+     "shell.execute_reply": "2024-06-24T14:23:44.898978Z",
+     "shell.execute_reply.started": "2024-06-24T14:23:42.690125Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
@@ -301,10 +326,10 @@
     "    if not is_multivariate:\n",
     "        common_size = len(filtered_peak_freqs)\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            filtered_peak_freqs, x_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
+    "            filtered_peak_freqs, x_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            filtered_peak_freqs, x_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
+    "            filtered_peak_freqs, x_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
     "        )\n",
     "\n",
     "    if not is_multivariate:\n",
@@ -318,39 +343,43 @@
     "    X_train_band.append(x_train_band)\n",
     "    X_val_band.append(x_val_band)\n",
     "             \n",
-    "    # PRETRAIN NOISE\n",
-    "    # UNI\n",
-    "    if not is_multivariate:\n",
-    "        X_pretrain.append(x_train.flatten())\n",
-    "        X_pretrain_noisy.append((add_noise(x_train, noise_std)).flatten())\n",
-    "    \n",
-    "    # MULTI\n",
-    "    X_pretrain_band.append(x_train_band)\n",
-    "    X_pretrain_band_noisy.append([add_noise(instance, noise_std) for instance in X_pretrain_band[i]])\n",
-    "    \n",
     "    #Train/Val/Test\n",
     "    if is_instances_classification:\n",
     "        # NOISE\n",
     "        # UNI\n",
     "        if not is_multivariate:\n",
+    "            x_train_noisy=[add_noise(instance, noise_std) for instance in x_train]\n",
     "            X_train_noisy.append([add_noise(instance, noise_std) for instance in x_train])\n",
     "            X_val_noisy.append([add_noise(instance, noise_std) for instance in x_val])\n",
     "            \n",
     "        # MULTI\n",
-    "        X_train_band_noisy.append([add_noise(instance, noise_std) for instance in x_train_band])\n",
+    "        x_train_band_noisy=[add_noise(instance, noise_std) for instance in x_train_band]\n",
+    "        X_train_band_noisy.append(x_train_band_noisy)\n",
     "        X_val_band_noisy.append([add_noise(instance, noise_std) for instance in x_val_band])\n",
     "    \n",
     "    else:  #if prediction\n",
     "        # NOISE\n",
     "        # UNI\n",
     "        if not is_multivariate:\n",
-    "            X_train_noisy.append(add_noise(x_train, noise_std))\n",
+    "            x_train_noisy=add_noise(x_train, noise_std)\n",
+    "            X_train_noisy.append(x_train_noisy)\n",
     "            X_val_noisy.append(add_noise(x_val, noise_std))\n",
     "    \n",
     "        # MULTI\n",
-    "        X_train_band_noisy.append(add_noise(x_train_band, noise_std))\n",
+    "        x_train_band_noisy=add_noise(x_train_band, noise_std)\n",
+    "        X_train_band_noisy.append(x_train_band_noisy)\n",
     "        X_val_band_noisy.append(add_noise(x_val_band, noise_std))\n",
-    "        \n"
+    "\n",
+    "    # Define the number of instances you want to select\n",
+    "    num_samples_for_pretrain = 500\n",
+    "    random_indices = np.random.choice(len(x_train), num_samples_for_pretrain, replace=False)\n",
+    "    \n",
+    "    # Defining pretrain   \n",
+    "    if not is_multivariate:\n",
+    "        X_pretrain.append(np.array(x_train)[random_indices].flatten())\n",
+    "        X_pretrain_noisy.append(np.array(x_train_noisy)[random_indices].flatten())\n",
+    "    X_pretrain_band.append(np.array(x_train_band)[random_indices])\n",
+    "    X_pretrain_band_noisy.append(np.array(x_train_band_noisy)[random_indices])\n"
    ]
   },
   {
@@ -388,7 +417,7 @@
     "SLICE_RANGE = slice(start_step, end_step)\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
-    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "function_name = \"random\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
@@ -477,7 +506,7 @@
     "        elif function_name == \"desp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 4)\n",
+    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 12)\n",
     "        elif function_name == \"random\":\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
@@ -487,9 +516,9 @@
     "\n",
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
-    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = 4, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = 12, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
     "            \n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = 4)\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = 12)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
     "            esn = init_and_train_model_for_prediction(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], RIDGE_COEF)\n",
@@ -537,7 +566,7 @@
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
     "N_TRIALS = 400\n",
-    "n_parallel_studies = 12\n",
+    "n_parallel_studies = 1\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
