--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -59,6 +59,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd424c55-8161-47cb-960c-eeb7ba4daa13",
+   "metadata": {},
+   "source": [
+    "## Aeon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e615afe6-6dd7-4a62-93dd-503c0f984c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aeon.datasets import load_classification\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "X_train_unprocessed, Y_train_raw, meta_data = load_classification(\"SpokenArabicDigits\", return_metadata=True, load_equal_length = False, split=\"train\")\n",
+    "X_test_unprocessed, Y_test_raw, meta_data = load_classification(\"SpokenArabicDigits\", return_metadata=True, load_equal_length = False, split=\"test\")\n",
+    "\n",
+    "is_instances_classification = True\n",
+    "sampling_rate = 10000\n",
+    "\n",
+    "groups = None\n",
+    "\n",
+    "X_train_raw = []\n",
+    "for x in X_train_unprocessed:\n",
+    "    X_train_raw.append(x.T)\n",
+    "\n",
+    "X_test_raw = []\n",
+    "for x in X_test_unprocessed:\n",
+    "    X_test_raw.append(x.T)\n",
+    "\n",
+    "if X_train_raw[0].shape[1] == 1:\n",
+    "    is_multivariate = False\n",
+    "else:\n",
+    "    is_multivariate = True\n",
+    "\n",
+    "print(\" Number of instances = \", len(X_train_raw))\n",
+    "print(\" Shape of X = \", X_train_raw[0].shape)\n",
+    "print(\" Shape of y = \", Y_train_raw.shape)\n",
+    "\n",
+    "print(\" Meta data = \", meta_data)\n",
+    "print(\"Multivariate = \", is_multivariate)\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
+    "Y_test = le.transform(Y_test_raw).reshape(-1, 1)\n",
+    "\n",
+    "# One-hot encode the labels\n",
+    "ohe = OneHotEncoder(sparse_output=False)\n",
+    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
+    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6dd4e7d3-717e-4f4b-a2fa-29fd6e272bd7",
    "metadata": {},
    "source": [
@@ -68,11 +124,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c1142ac-0008-40c0-b7a8-1118e837476a",
+   "cell_type": "raw",
+   "id": "734bc8df-7078-41a8-b426-cdb2e53e4702",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -171,21 +225,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "a5550bc2-4e49-4ae9-bb3e-24700f3a7118",
+   "id": "06785506-5aea-41a8-b8ff-ee2476c949b3",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-25T14:12:02.346595Z",
-     "iopub.status.busy": "2024-06-25T14:12:02.345871Z",
-     "iopub.status.idle": "2024-06-25T14:12:03.035951Z",
-     "shell.execute_reply": "2024-06-25T14:12:03.022165Z",
-     "shell.execute_reply.started": "2024-06-25T14:12:02.346551Z"
-    },
     "scrolled": true
    },
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
    ]
@@ -301,6 +348,7 @@
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "\n",
     "WINDOW_LENGTH = 10\n",
+    "sampling_rate = 10000\n",
     "\n",
     "smoothed_peaks_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=True)\n",
     "nb_smoothed = len(smoothed_peaks_freqs[0]) if is_multivariate else len(smoothed_peaks_freqs)\n",
@@ -318,8 +366,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datasets.multivariate_generation\n",
-    "reload(datasets.multivariate_generation)\n",
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
     "\n",
     "if not is_multivariate:\n",
@@ -485,8 +531,9 @@
    "outputs": [],
    "source": [
     "# Define the number of instances you want to select\n",
-    "num_samples_for_pretrain = 500\n",
-    "random_indices = np.random.choice(len(X_train), num_samples_for_pretrain, replace=False)\n",
+    "x_size = len(X_train_band) if is_multivariate else len(X_train)\n",
+    "num_samples_for_pretrain = 500 if x_size >= 500 else x_size\n",
+    "random_indices = np.random.choice(x_size, num_samples_for_pretrain, replace=False)\n",
     "\n",
     "if not is_multivariate:\n",
     "    X_pretrain_uni = np.array(X_train)[random_indices]\n",
@@ -1217,9 +1264,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b91d01e8-8763-4bf3-ae0a-4c4569231dc4",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if not is_multivariate:\n",
@@ -1778,9 +1823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hadsp_env",
+   "display_name": "HAG_env",
    "language": "python",
-   "name": "hadsp_env"
+   "name": "hag_env"
   },
   "language_info": {
    "codemirror_mode": {
