--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -59,6 +59,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16b2d29d-7fff-4032-8b36-559c722818b8",
+   "metadata": {},
+   "source": [
+    "## Aeon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d17896a5-1bd7-4924-91ca-53ca0265658a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aeon.datasets import load_classification\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "dataset_name = \"SpokenArabicDigits\"\n",
+    "\n",
+    "X_train_unprocessed, Y_train_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"train\")\n",
+    "X_test_unprocessed, Y_test_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"test\")\n",
+    "\n",
+    "is_instances_classification = True\n",
+    "sampling_rate = 10000\n",
+    "\n",
+    "groups = None\n",
+    "\n",
+    "X_train_raw = []\n",
+    "for x in X_train_unprocessed:\n",
+    "    X_train_raw.append(x.T)\n",
+    "\n",
+    "X_test_raw = []\n",
+    "for x in X_test_unprocessed:\n",
+    "    X_test_raw.append(x.T)\n",
+    "\n",
+    "if X_train_raw[0].shape[1] == 1:\n",
+    "    is_multivariate = False\n",
+    "else:\n",
+    "    is_multivariate = True\n",
+    "\n",
+    "print(\" Number of instances = \", len(X_train_raw))\n",
+    "print(\" Shape of X = \", X_train_raw[0].shape)\n",
+    "print(\" Shape of y = \", Y_train_raw.shape)\n",
+    "\n",
+    "print(\" Meta data = \", meta_data)\n",
+    "print(\"Multivariate = \", is_multivariate)\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
+    "Y_test = le.transform(Y_test_raw).reshape(-1, 1)\n",
+    "\n",
+    "# One-hot encode the labels\n",
+    "ohe = OneHotEncoder(sparse_output=False)\n",
+    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
+    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ceb81c7-9923-4fee-a6ed-98a84b3b7b6f",
    "metadata": {},
    "source": [
@@ -68,22 +126,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87482c3f-f0e7-4185-9ad2-c35037b131dd",
+   "cell_type": "raw",
+   "id": "4d2b8fc2-1220-4072-8e76-2bd17dc53de7",
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from torchaudio.datasets import VoxCeleb1Identification, SPEECHCOMMANDS\n",
     "from torch.utils.data import ConcatDataset, random_split, DataLoader\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "dataset_name = \"SPEECHCOMMANDS\"\n",
     "\n",
     "dataset_train = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"training\")\n",
     "dataset_val = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"validation\")\n",
@@ -114,16 +172,6 @@
     "ohe = OneHotEncoder(sparse_output=False)\n",
     "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
     "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb784bf1-a56a-4ed7-acb1-dde1d1b96fc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_name = \"SPEECHCOMMANDS\""
    ]
   },
   {
@@ -371,9 +419,10 @@
     "        X_val_band_noisy.append(add_noise(x_val_band, noise_std))\n",
     "\n",
     "    # Define the number of instances you want to select\n",
-    "    num_samples_for_pretrain = 500\n",
-    "    random_indices = np.random.choice(len(x_train), num_samples_for_pretrain, replace=False)\n",
-    "    \n",
+    "    x_size = len(X_train_band) if is_multivariate else len(X_train)\n",
+    "    num_samples_for_pretrain = 500 if x_size >= 500 else x_size\n",
+    "    random_indices = np.random.choice(x_size, num_samples_for_pretrain, replace=False)\n",
+    "\n",
     "    # Defining pretrain   \n",
     "    if not is_multivariate:\n",
     "        X_pretrain.append(np.array(x_train)[random_indices].flatten())\n",
@@ -417,7 +466,7 @@
     "SLICE_RANGE = slice(start_step, end_step)\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
-    "function_name = \"random\" # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
@@ -502,7 +551,7 @@
     "        if function_name == \"hadsp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 1)\n",
+    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 12)\n",
     "        elif function_name == \"desp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
@@ -566,7 +615,7 @@
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
     "N_TRIALS = 400\n",
-    "n_parallel_studies = 1\n",
+    "n_parallel_studies = 3\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
@@ -585,47 +634,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e355b9b7-6625-47be-8a7e-8d388448e85b",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "## Mackey Glass\n",
-    "### Ridge parameter\n",
-    "| Dataset     | Algorithm | test   | Curve shape | Best value |\n",
-    "|-------------|-----------|--------|-------------|------------|\n",
-    "| MackeyGlass | DESP      | normal | no extremum | 10         |\n",
-    "| MackeyGlass | HADSP     | normal | no extremum | 9,10       |\n",
-    "| MackeyGlass | random    | normal | no extremum | 9,10       |\n",
-    "| MackeyGlass | DESP      | noisy  | bell        | 7          |\n",
-    "| MackeyGlass | HADSP     | noisy  | bell        | 6          |\n",
-    "| MackeyGlass | random    | noisy  | no extremum | 10         |\n",
-    "\n",
-    "### Results, no validation/test\n",
-    "\n",
-    "|           |  HADSP |  DESP  | random |\n",
-    "|-----------|--------|--------|--------|\n",
-    "|  normal   | 0.0399 | 0.0379 | 0.0446 |\n",
-    "|  noisy    | 0.119  | 0.109  | 0.104  | \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b9cf04a0-7ee8-44fd-a8e0-cbf632a9a2c9",
    "metadata": {},
    "source": [
     "## Japanese vowels\n",
-    "\n",
-    "### Ridge parameter\n",
-    "\n",
-    "| Dataset        | Algorithm | test   | Curve shape | Best value |\n",
-    "|----------------|-----------|--------|-------------|------------|\n",
-    "| JapaneseVowels | DESP      | normal | bell        | 2          |\n",
-    "| JapaneseVowels | HADSP     | normal | bell        | 4          |\n",
-    "| JapaneseVowels | random    | normal | bell        | 4          |\n",
-    "| JapaneseVowels | DESP      | noisy  | bell        | 2          |\n",
-    "| JapaneseVowels | HADSP     | noisy  | bell        | 5          |\n",
-    "| JapaneseVowels | random    | noisy  | bell        | 5          |\n",
     "\n",
     "### Results, no validation/test\n",
     "\n",
@@ -646,9 +658,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hadsp_env",
+   "display_name": "HAG_env",
    "language": "python",
-   "name": "hadsp_env"
+   "name": "hag_env"
   },
   "language_info": {
    "codemirror_mode": {
