Parrallelism of pearson

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -1823,9 +1823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HAG_env",
+   "display_name": "hadsp_env",
    "language": "python",
-   "name": "hag_env"
+   "name": "hadsp_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1837,7 +1837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
