--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -466,6 +466,7 @@
     "SLICE_RANGE = slice(start_step, end_step)\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
+    "N_JOBS = 4\n",
     "function_name = \"hadsp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
@@ -551,11 +552,11 @@
     "        if function_name == \"hadsp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 12)\n",
+    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = N_JOBS)\n",
     "        elif function_name == \"desp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = 12)\n",
+    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = N_JOBS)\n",
     "        elif function_name == \"random\":\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
@@ -565,9 +566,9 @@
     "\n",
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
-    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = 12, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = N_JOBS, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
     "            \n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = 12)\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = N_JOBS)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
     "            esn = init_and_train_model_for_prediction(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], RIDGE_COEF)\n",
@@ -658,9 +659,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HAG_env",
+   "display_name": "hadsp_env",
    "language": "python",
-   "name": "hag_env"
+   "name": "hadsp_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -672,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
